<resources>
    <string name="app_name">Exam</string>
    <string name="mail">Почта</string>
    <string name="login">Введите почту</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="list">Список товаров</string>
    <string name="name">Название товара</string>
    <string name="back">Назад</string>
    <string name="go">Вперед</string>
    <string name="_50_50">Страница 50 из 50</string>
    <string name="eng">Покупка завершена</string>
    <string name="rustic_wooden_table">Успешно купили товар Rustic Wooden Table</string>
    <string name="ok">OK</string>
</resources>