<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="292dp"
        android:text="@string/mail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="18sp"
        android:hint="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:layout_marginTop="379dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16sp" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="18sp"
        android:hint="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <Button
        android:id="@+id/btninactivity"
        android:layout_width="357dp"
        android:layout_height="49dp"
        android:layout_marginTop="550dp"
        android:layout_marginRight="16sp"
        android:layout_marginLeft="16sp"
        android:autoSizeTextType="none"
        android:background="@drawable/btn_background"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>